--- a/hooks/package.json
+++ b/hooks/package.json
@@ -13,7 +13,9 @@
     "hooks": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-error-boundary": "^4.0.13",
+    "react-router-dom": "^6.26.2",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
