--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "react-error-boundary": "^4.0.13",
+    "react-router-dom": "^6.26.2",
     "vanilla-tilt": "^1.8.1"
   }
 }
