--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@fontsource/roboto": "^5.1.0",
+    "@mui/x-data-grid": "^7.21.0",
     "react-error-boundary": "^4.0.13",
     "react-router-dom": "^6.26.2",
     "vanilla-tilt": "^1.8.1"
