--- a/karangos/package.json
+++ b/karangos/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
+    "@mui/x-data-grid": "^7.21.0",
     "karangos": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
