--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/x-data-grid": "^7.21.0",
+    "@mui/x-date-pickers": "^7.22.0",
+    "date-fns": "^4.1.0",
     "react-error-boundary": "^4.0.13",
     "react-router-dom": "^6.26.2",
     "vanilla-tilt": "^1.8.1"
