--- a/karangos/package.json
+++ b/karangos/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
