--- a/karangos/package.json
+++ b/karangos/package.json
@@ -21,6 +21,7 @@
     "karangos": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
