--- a/Karangos/package.json
+++ b/Karangos/package.json
@@ -16,8 +16,11 @@
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@mui/x-data-grid": "^7.21.0",
+    "@mui/x-date-pickers": "^7.22.0",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
