--- a/karangos/package.json
+++ b/karangos/package.json
@@ -20,8 +20,9 @@
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-input-mask": "^2.0.4",
-    "react-router-dom": "^6.26.2"
+    "react-input-mask": "^3.0.0-alpha.2",
+    "react-router-dom": "^6.26.2",
+    "react-text-mask": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
