--- a/karangos/package.json
+++ b/karangos/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.2",
     "react-text-mask": "^5.5.0"
   },
