--- a/karangos/package.json
+++ b/karangos/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^7.21.0",
     "@mui/x-date-pickers": "^7.22.0",
     "date-fns": "^4.1.0",
+    "karangos": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-input-mask": "^2.0.4",
